--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test:ui": "playwright test"
   },
   "dependencies": {
     "next": "14.2.3",
@@ -17,6 +18,7 @@
     "typescript": "5.3.3",
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.9",
-    "@types/node": "20.11.24"
+    "@types/node": "20.11.24",
+    "@playwright/test": "1.49.0"
   }
 }
