Fix Railway deploy: add pydantic-settings and harden config imports

--- a/env.example
+++ b/env.example
@@ -1,7 +1,8 @@
 # Backend configuration
 ENV=development
 BACKEND_PUBLIC_BASE_URL=http://localhost:8000
-CORS_ORIGINS=http://localhost:3000
+# CORS_ORIGINS can be comma-separated or JSON list; "*" allows all (in Railway set to your actual frontend domain)
+CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
 SUPABASE_URL=
 SUPABASE_ANON_KEY=
 SUPABASE_SERVICE_ROLE_KEY=
