--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 fastapi==0.115.0
 uvicorn[standard]==0.30.0
 pydantic==2.9.0
+pydantic-settings==2.4.0
 redis==5.0.4
 httpx==0.27.0
 python-dotenv==1.0.1
