--- a/railway.toml
+++ b/railway.toml
@@ -2,6 +2,6 @@
 builder = "NIXPACKS"
 
 [deploy]
-startCommand = "uvicorn backend.app.main:app --host 0.0.0.0 --port $PORT"
+startCommand = "bash start.sh"
 healthcheckPath = "/health"
 restartPolicyType = "ON_FAILURE"
