--- a/.nixpacks/nixpacks.toml
+++ b/.nixpacks/nixpacks.toml
@@ -1,9 +1,13 @@
 [phases.setup]
-nixPkgs = ["python312", "python312Packages.pip", "gcc"]
+nixPkgs = ["python312", "python312Packages.pip", "python312Packages.setuptools", "python312Packages.wheel"]
 
 [phases.install]
 cmds = [
-  "python3 -m pip install --upgrade pip",
+  "set -eux",
+  "command -v python3",
+  "python3 --version",
+  "python3 -m pip --version",
+  "python3 -m pip install --upgrade pip setuptools wheel",
   "python3 -m pip install -r requirements.txt"
 ]
 
