--- a/env.example
+++ b/env.example
@@ -4,13 +4,14 @@ BACKEND_PUBLIC_BASE_URL=http://localhost:8000
 # CORS_ORIGINS can be comma-separated or JSON list; include your Vercel domain for prod
 # Example: CORS_ORIGINS=https://yourapp.vercel.app,http://localhost:3000,http://127.0.0.1:3000
 CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+DATABASE_URL=
 SUPABASE_URL=
 SUPABASE_ANON_KEY=
 SUPABASE_SERVICE_ROLE_KEY=
-DATABASE_URL=
+LOG_LEVEL=INFO
+# Phase 15 Step 2: Supabase Postgres (bounded storage). DATABASE_URL should point to the Supabase Postgres URL.
 MODEL_PROVIDER_API_KEY=
 MODEL_PROVIDER_BASE_URL=
-LOG_LEVEL=INFO
 
 # Optional model overrides
 LLM_REASONING_MODEL=reasoning-model
