phase15: step3 auth identity (supabase jwt + anon sessions)

--- a/env.example
+++ b/env.example
@@ -8,6 +8,11 @@ DATABASE_URL=
 SUPABASE_URL=
 SUPABASE_ANON_KEY=
 SUPABASE_SERVICE_ROLE_KEY=
+SUPABASE_JWT_AUD=authenticated
+SUPABASE_JWT_ISSUER=
+AUTH_COOKIE_SECURE=false
+ANON_SESSION_TTL_DAYS=30
+IDENTITY_HASH_SALT=dev-salt
 LOG_LEVEL=INFO
 # Phase 15 Step 2: Supabase Postgres (bounded storage). DATABASE_URL should point to the Supabase Postgres URL.
 MODEL_PROVIDER_API_KEY=
