phase15: step4 plans quotas ttl (above-the-line limits only)

--- a/env.example
+++ b/env.example
@@ -17,6 +17,9 @@ LOG_LEVEL=INFO
 # Phase 15 Step 2: Supabase Postgres (bounded storage). DATABASE_URL should point to the Supabase Postgres URL.
 MODEL_PROVIDER_API_KEY=
 MODEL_PROVIDER_BASE_URL=
+PLAN_DEFAULT=free
+PRO_SUBJECTS=
+MAX_SUBJECTS=
 
 # Optional model overrides
 LLM_REASONING_MODEL=reasoning-model
