phase15: step5 abuse defense (rate limit + lockouts + request shaping)

--- a/env.example
+++ b/env.example
@@ -20,6 +20,19 @@ MODEL_PROVIDER_BASE_URL=
 PLAN_DEFAULT=free
 PRO_SUBJECTS=
 MAX_SUBJECTS=
+WAF_MAX_BODY_BYTES=200000
+WAF_MAX_USER_TEXT_CHARS=8000
+WAF_IP_BURST_LIMIT=5
+WAF_IP_BURST_WINDOW_SECONDS=10
+WAF_IP_SUSTAIN_LIMIT=60
+WAF_IP_SUSTAIN_WINDOW_SECONDS=60
+WAF_SUBJECT_BURST_LIMIT=8
+WAF_SUBJECT_BURST_WINDOW_SECONDS=10
+WAF_SUBJECT_SUSTAIN_LIMIT=120
+WAF_SUBJECT_SUSTAIN_WINDOW_SECONDS=60
+WAF_LOCKOUT_SCHEDULE_SECONDS=30,120,600,3600
+WAF_LOCKOUT_COOLDOWN_SECONDS=21600
+WAF_ENFORCE_ROUTES=/api/chat
 
 # Optional model overrides
 LLM_REASONING_MODEL=reasoning-model
