phase15: step6 observability (passive logs + minimal invocation logs)

--- a/env.example
+++ b/env.example
@@ -14,6 +14,8 @@ AUTH_COOKIE_SECURE=false
 ANON_SESSION_TTL_DAYS=30
 IDENTITY_HASH_SALT=dev-salt
 LOG_LEVEL=INFO
+METRICS_ENABLED=0
+# Observability is passive only; never log user_text or model outputs.
 # Phase 15 Step 2: Supabase Postgres (bounded storage). DATABASE_URL should point to the Supabase Postgres URL.
 MODEL_PROVIDER_API_KEY=
 MODEL_PROVIDER_BASE_URL=
