phase15: fix cors env parsing + silence pydantic model_ warnings

--- a/env.example
+++ b/env.example
@@ -1,8 +1,10 @@
 # Backend configuration
 ENV=development
 BACKEND_PUBLIC_BASE_URL=http://localhost:8000
-# CORS_ORIGINS can be comma-separated or JSON list; include your Vercel domain for prod
-# Example: CORS_ORIGINS=https://yourapp.vercel.app,http://localhost:3000,http://127.0.0.1:3000
+# CORS_ORIGINS accepts JSON list (recommended) or CSV (also accepted).
+# JSON example: CORS_ORIGINS=["https://yourapp.vercel.app","http://localhost:3000","http://127.0.0.1:3000"]
+# CSV example:  CORS_ORIGINS=https://yourapp.vercel.app,http://localhost:3000,http://127.0.0.1:3000
+# Invalid values won’t crash; they’re parsed best-effort and empty entries are ignored.
 CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
 DATABASE_URL=
 SUPABASE_URL=
