phase16: step2 env separation guards (fail-fast + cross-wire protection)

--- a/env.example
+++ b/env.example
@@ -1,5 +1,5 @@
 # Backend configuration
-ENV=development
+APP_ENV=local  # allowed: local|staging|production (prod/local synonyms normalized)
 BACKEND_PUBLIC_BASE_URL=http://localhost:8000
 # CORS_ORIGINS accepts JSON list (recommended) or CSV (also accepted).
 # JSON example: CORS_ORIGINS=["https://yourapp.vercel.app","http://localhost:3000","http://127.0.0.1:3000"]
@@ -18,7 +18,7 @@ IDENTITY_HASH_SALT=dev-salt
 LOG_LEVEL=INFO
 METRICS_ENABLED=0
 # Observability is passive only; never log user_text or model outputs.
-# Phase 15 Step 2: Supabase Postgres (bounded storage). DATABASE_URL should point to the Supabase Postgres URL.
+# Phase 15 baseline: bounded storage. DATABASE_URL should point to the Supabase Postgres URL.
 MODEL_PROVIDER_API_KEY=
 MODEL_PROVIDER_BASE_URL=
 PLAN_DEFAULT=free
@@ -37,6 +37,11 @@ WAF_SUBJECT_SUSTAIN_WINDOW_SECONDS=60
 WAF_LOCKOUT_SCHEDULE_SECONDS=30,120,600,3600
 WAF_LOCKOUT_COOLDOWN_SECONDS=21600
 WAF_ENFORCE_ROUTES=/api/chat
+# Environment separation allowlists (CSV). Required in staging/prod:
+# - staging Railway must point to staging Supabase host
+# - production Railway must point to production Supabase host
+DB_HOST_ALLOWLIST_STAGING=
+DB_HOST_ALLOWLIST_PROD=
 
 # Optional model overrides
 LLM_REASONING_MODEL=reasoning-model
