phase16: step2 performance budgets (timeouts + shared http client)

--- a/env.example
+++ b/env.example
@@ -42,6 +42,15 @@ WAF_ENFORCE_ROUTES=/api/chat
 # - production Railway must point to production Supabase host
 DB_HOST_ALLOWLIST_STAGING=
 DB_HOST_ALLOWLIST_PROD=
+# Performance budgets (Phase 16 Step 2)
+API_CHAT_TOTAL_TIMEOUT_MS=20000
+MODEL_CALL_TIMEOUT_MS=12000
+OUTBOUND_HTTP_TIMEOUT_S=8.0
+OUTBOUND_HTTP_CONNECT_TIMEOUT_S=3.0
+OUTBOUND_HTTP_READ_TIMEOUT_S=8.0
+OUTBOUND_HTTP_MAX_CONNECTIONS=20
+OUTBOUND_HTTP_MAX_KEEPALIVE_CONNECTIONS=10
+OUTBOUND_HTTP_KEEPALIVE_EXPIRY_S=30.0
 
 # Optional model overrides
 LLM_REASONING_MODEL=reasoning-model
