--- a/env.example
+++ b/env.example
@@ -52,6 +52,18 @@ OUTBOUND_HTTP_MAX_CONNECTIONS=20
 OUTBOUND_HTTP_MAX_KEEPALIVE_CONNECTIONS=10
 OUTBOUND_HTTP_KEEPALIVE_EXPIRY_S=30.0
 
+# Cost control (Phase 16 Step 3)
+COST_GLOBAL_DAILY_TOKENS=500000
+COST_IP_WINDOW_SECONDS=3600
+COST_IP_WINDOW_TOKENS=20000
+COST_ACTOR_DAILY_TOKENS=50000
+COST_REQUEST_MAX_TOKENS=6000
+COST_REQUEST_MAX_OUTPUT_TOKENS=1200
+COST_BREAKER_FAIL_THRESHOLD=5
+COST_BREAKER_WINDOW_SECONDS=60
+COST_BREAKER_COOLDOWN_SECONDS=120
+COST_EVENTS_RING_SIZE=500
+
 # Optional model overrides
 LLM_REASONING_MODEL=reasoning-model
 LLM_EXPRESSION_MODEL=expression-model
