--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -6,9 +6,10 @@ cmds = [
   "set -eux",
   "command -v python3",
   "python3 --version",
-  "python3 -m pip --version",
-  "python3 -m pip install --upgrade pip setuptools wheel",
-  "python3 -m pip install -r requirements.txt"
+  "command -v pip",
+  "pip --version",
+  "pip install --upgrade pip setuptools wheel",
+  "pip install -r requirements.txt"
 ]
 
 [start]
