--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,15 +1,17 @@
 [phases.setup]
-nixPkgs = ["python312", "python312Packages.pip", "python312Packages.setuptools", "python312Packages.wheel"]
+nixPkgs = ["python312", "python312Packages.virtualenv", "python312Packages.setuptools", "python312Packages.wheel"]
 
 [phases.install]
 cmds = [
   "set -eux",
   "command -v python3",
   "python3 --version",
-  "command -v pip",
-  "pip --version",
-  "pip install --upgrade pip setuptools wheel",
-  "pip install -r requirements.txt"
+  "rm -rf .venv",
+  "virtualenv -p python3 .venv",
+  ".venv/bin/python --version",
+  ".venv/bin/python -m pip --version",
+  ".venv/bin/python -m pip install --upgrade pip setuptools wheel",
+  ".venv/bin/python -m pip install -r requirements.txt"
 ]
 
 [start]
