--- a/.nixpacks/nixpacks.toml
+++ b/.nixpacks/nixpacks.toml
@@ -11,7 +11,17 @@ cmds = [
   ".venv/bin/python --version",
   ".venv/bin/python -m pip --version",
   ".venv/bin/python -m pip install --upgrade pip setuptools wheel",
-  ".venv/bin/python -m pip install -r requirements.txt"
+  ".venv/bin/python -m pip install -r requirements.txt",
+  "test -f frontend/package.json",
+  "cd frontend && npm ci",
+  "cd /app"
+]
+
+[phases.build]
+cmds = [
+  "set -eux",
+  "cd frontend",
+  "npm run build"
 ]
 
 [start]
