--- a/.nixpacks/nixpacks.toml
+++ b/.nixpacks/nixpacks.toml
@@ -1,11 +1,15 @@
 [phases.setup]
-nixPkgs = ["python312", "python312Packages.virtualenv", "python312Packages.setuptools", "python312Packages.wheel"]
+nixPkgs = ["python312", "python312Packages.virtualenv", "python312Packages.setuptools", "python312Packages.wheel", "nodejs_20"]
 
 [phases.install]
 cmds = [
   "set -eux",
   "command -v python3",
   "python3 --version",
+  "command -v node",
+  "node --version",
+  "command -v npm",
+  "npm --version",
   "rm -rf .venv",
   "virtualenv -p python3 .venv",
   ".venv/bin/python --version",
