--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,9 @@
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.9",
     "@types/node": "20.11.24",
-    "@playwright/test": "1.49.0"
+    "@playwright/test": "1.49.0",
+    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32"
   }
 }
