fix: resolve Next.js build issues and chat timeout handling
- Remove invalid outputFileTracingRoot from next.config.mjs
- Add assistant role support to StoredMessage type for chat persistence
- Fix request timeout tracking with performance.now() for accuracy
- Add proper abort error detection and debug info tracking
- Add retry button for failed/timed-out chat requests
- Add build scripts (clean, verify-lockfile) and .nvmrc for consistency
- Remove root package-lock.json to avoid workspace conflicts

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "dev:clean": "rimraf .next .turbo node_modules/.cache && next dev",
-    "build": "next build",
+    "dev:clean": "npm run clean:next && next dev",
+    "clean": "node scripts/rm.mjs .next .turbo node_modules/.cache",
+    "clean:next": "node scripts/rm.mjs .next .turbo",
+    "prebuild": "node scripts/verify-lockfile.mjs",
+    "build": "npm run clean:next && next build",
     "start": "next start",
     "lint": "next lint",
     "test:ui": "playwright test",
@@ -27,7 +30,9 @@
     "@playwright/test": "1.49.0",
     "tailwindcss": "^3.4.0",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "rimraf": "^5.0.5"
+    "postcss": "^8.4.32"
+  },
+  "engines": {
+    "node": ">=18.17.0"
   }
 }
